--- a/tmux.conf
+++ b/tmux.conf
@@ -64,8 +64,8 @@ set -g set-titles-string "#T"
 
 # Move between panes with vi keys
 # bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
+bind j select-pane -D
+bind k select-pane -U
 # bind l select-pane -R # this breaks "[C-a][l]" for "last-window"
 
 # Set new panes to open in current directory
