fix tmux directory in new windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,7 +73,10 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set -g default-command /usr/bin/fish
+# setting just one of these is sufficient and more correct
+# https://github.com/fish-shell/fish-shell/issues/5699
+#
+# set -g default-command /usr/bin/fish
 set -g default-shell /usr/bin/fish
 
 ######################
