remove commented-out tmux code; linebreak in vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-# largely copied from
+# largely originally copied from
 # https://github.com/jonhoo/configs/blob/master/shell/.tmux.conf
 
 # set scroll history to 100,000 lines
@@ -28,24 +28,13 @@ bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 # To copy, left click and drag to highlight text in yellow, once you release
 # left click yellow text will disappear and will automatically be available in
 # clipboard.
+#
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-
-# XXX: what does this do?
-# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-
-# copy to X clipboard
-# bind -T copy-mode-vi v send -X begin-selection
-# bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
-# bind -T copy-mode-vi Enter send-keys -X cancel
-
-# shortcut for moving tmux buffer to clipboard
-# useful if you've selected with the mouse
-# bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
 
 # Avoid ESC delay
 set -s escape-time 0
@@ -66,7 +55,7 @@ set -g set-titles-string "#T"
 # bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
-# bind l select-pane -R # this breaks "[C-a][l]" for "last-window"
+# bind l select-pane -R # this breaks "<C-a><l>" for "last-window"
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
@@ -75,7 +64,6 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # setting just one of these is sufficient and more correct
 # https://github.com/fish-shell/fish-shell/issues/5699
-#
 # set -g default-command /usr/bin/fish
 set -g default-shell /usr/bin/fish
 
@@ -86,58 +74,6 @@ set -g default-shell /usr/bin/fish
 # Avoid date/time taking up space
 set -g status-right ''
 set -g status-right-length 0
-
-##################################################
-### COLOR (base16 gruvbox dark hard), copied.  ###
-##################################################
-
-# # default statusbar colors
-# set-option -g status-style "fg=#bdae93,bg=#1D2021"
-# # default window title colors
-# set-window-option -g window-status-style "fg=#bdae93,bg=default"
-# # active window title colors
-# set-window-option -g window-status-current-style "fg=#fabd2f,bg=default"
-# # pane border
-# set-option -g pane-border-style "fg=#1D2021"
-# set-option -g pane-active-border-style "fg=#504945"
-# # message text
-# set-option -g message-style "fg=#d5c4a1,bg=#1D2021"
-# # pane number display
-# set-option -g display-panes-active-colour "#b8bb26"
-# set-option -g display-panes-colour "#fabd2f"
-# # clock
-# set-window-option -g clock-mode-colour "#b8bb26"
-# # copy mode highligh
-# set-window-option -g mode-style "fg=#bdae93,bg=#504945"
-# # bell
-# set-window-option -g window-status-bell-style "fg=#1D2021,bg=#fb4934"
-
-
-#####################
-### COLOR (ayu).  ###
-#####################
-
-# # default statusbar colors
-# set-option -g status-style "fg=#B3B1AD,bg=#000000"
-# # default window title colors
-# set-window-option -g window-status-style "fg=#B3B1AD,bg=default"
-# # active window title colors
-# set-window-option -g window-status-current-style "fg=#E6B450,bg=default"
-# # pane border
-# set-option -g pane-border-style "fg=#000000"
-# set-option -g pane-active-border-style "fg=#152A1E"
-# # message text
-# set-option -g message-style "fg=#B3B1AD,bg=#000000"
-# # pane number display
-# set-option -g display-panes-active-colour "#C2D94C"
-# set-option -g display-panes-colour "#E6B450"
-# # clock
-# set-window-option -g clock-mode-colour "#C2D94C"
-# # copy mode highligh
-# set-window-option -g mode-style "fg=#B3B1AD,bg=#151A1E"
-# # bell
-# set-window-option -g window-status-bell-style "fg=#000000,bg=#FF3333"
-
 
 ########################
 ### COLOR (custom).  ###
