--- a/tmux.conf
+++ b/tmux.conf
@@ -80,7 +80,7 @@ set -g status-right-length 0
 ########################
 
 # default statusbar colors
-set-option -g status-style "fg=#bdae93,bg=#1E1E1E"
+set-option -g status-style "fg=#bdae93,bg=#1e1e1e"
 # default window title colors
 set-window-option -g window-status-style "fg=#bdae93,bg=default"
 # active window title colors
@@ -93,3 +93,5 @@ set-option -g display-panes-active-colour "#b8bb26"
 set-option -g display-panes-colour "#fabd2f"
 # clock
 set-window-option -g clock-mode-colour "#b8bb26"
+# message text
+set-option -g message-style "fg=#B3B1AD,bg=#1e1e1e"
