move status bar to top

--- a/tmux.conf
+++ b/tmux.conf
@@ -75,6 +75,9 @@ set -g default-shell /usr/bin/fish
 set -g status-right ''
 set -g status-right-length 0
 
+# move status bar to top (makes it more familiar to switch tabs by clicking)
+set-option -g status-position top
+
 ########################
 ### COLOR (custom).  ###
 ########################
