--- a/tmux.conf
+++ b/tmux.conf
@@ -87,7 +87,7 @@ set-option -g status-style "fg=#bdae93,bg=#1e1e1e"
 # default window title colors
 set-window-option -g window-status-style "fg=#bdae93,bg=default"
 # active window title colors
-set-window-option -g window-status-current-style "fg=#fabd2f,bg=default"
+set-window-option -g window-status-current-style "fg=#657B83,bg=default"
 # pane border
 set-option -g pane-border-style "fg=#1D2021"
 set-option -g pane-active-border-style "fg=#504945"
