lightline colors and more
_ show exit code in bash prompt
- use sublime

--- a/config/git/config
+++ b/config/git/config
@@ -5,6 +5,8 @@
 	email = nishanth.gerrard@gmail.com
 [init]
 	defaultBranch = main
+[core]
+	editor = subl -n -w
 [alias]
 	co = checkout
 	s = status
