--- a/config/rsnapshot/rsnapshot.conf
+++ b/config/rsnapshot/rsnapshot.conf
@@ -223,18 +223,18 @@ sync_first	0
 ###############################
 
 # LOCALHOST
-#backup	/home/		localhost/
-#backup	/etc/		localhost/
-#backup	/usr/		localhost/	+rsync_long_args=--exclude=tmp
-#backup	/boot/		localhost/
-#backup	/lib/		localhost/
-#backup	/lib64/		localhost/
-#backup	/opt/		localhost/
-#backup	/root/		localhost/
-#backup	/sys/		localhost/
+backup	/home/		localhost/
+backup	/etc/		localhost/
+backup	/usr/		localhost/	+rsync_long_args=--exclude=tmp
+backup	/boot/		localhost/
+backup	/lib/		localhost/
+backup	/lib64/		localhost/
+backup	/opt/		localhost/
+backup	/root/		localhost/
+backup	/sys/		localhost/
 backup	/var/		localhost/	+rsync_long_args=--exclude=tmp,exclude=run
-#backup	/bin/		localhost/
-#backup	/sbin/		localhost/
+backup	/bin/		localhost/
+backup	/sbin/		localhost/
 
 #backup	/var/log/rsnapshot		localhost/
 #backup	/etc/passwd	localhost/
