change backups dirs

--- a/config/rsnapshot/rsnapshot.conf
+++ b/config/rsnapshot/rsnapshot.conf
@@ -174,7 +174,7 @@ lockfile	/var/run/rsnapshot.pid
 # This is the best way to support special files (FIFOs, etc) cross-platform.
 # The default is 0 (off).
 #
-#link_dest	0
+link_dest	1
 
 # When sync_first is enabled, it changes the default behaviour of rsnapshot.
 # Normally, when rsnapshot is called with its lowest interval
@@ -224,17 +224,14 @@ sync_first	0
 
 # LOCALHOST
 backup	/home/		localhost/
-backup	/etc/		localhost/
-backup	/usr/		localhost/	+rsync_long_args=--exclude=tmp
+backup	/etc/		localhost/	+rsync_long_args=--exclude=udev
+backup	/usr/local/	localhost/
 backup	/boot/		localhost/
-backup	/lib/		localhost/
-backup	/lib64/		localhost/
 backup	/opt/		localhost/
 backup	/root/		localhost/
-backup	/sys/		localhost/
-backup	/var/		localhost/	+rsync_long_args=--exclude=tmp,exclude=run
-backup	/bin/		localhost/
-backup	/sbin/		localhost/
+backup	/srv/		localhost/
+backup	/var/		localhost/	+rsync_long_args=--exclude=tmp,exclude=run,exclude=lock,exclude=cache
+backup_exec	/bin/date "+ backup ended at %c"
 
 #backup	/var/log/rsnapshot		localhost/
 #backup	/etc/passwd	localhost/
