--- a/config/git/config
+++ b/config/git/config
@@ -2,7 +2,7 @@
 	ui = true
 [user]
 	name = Nishanth Shanmugham
-	email = ns@mail.growl.space
+	email = nishanth.gerrard@gmail.com
 	signingkey = 2BFED8F6846F99B4
 [init]
 	defaultBranch = main
